--- a/calendrier.html
+++ b/calendrier.html
@@ -110,6 +110,7 @@
     <a href="index.html">Accueil</a>
     <a href="calendrier.html">Calendrier</a>
     <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
+    <a href="photos.html">Photos</a>
   </nav>
 
 <h1>Calendrier d'amour 💖</h1>
