--- a/carte.html
+++ b/carte.html
@@ -50,10 +50,11 @@
 <body>
 
 <nav>
-  <a href="index.html">Accueil</a>
-  <a href="calendrier.html">Calendrier</a>
-  <a href="carte.html">Carte</a>
-</nav>
+    <a href="index.html">Accueil</a>
+    <a href="calendrier.html">Calendrier</a>
+    <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
+    <a href="photos.html">Photos</a>
+  </nav>
 
 <select id="user-select">
   <option value="">-- Choisis un utilisateur --</option>
