--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <a href="index.html">Accueil</a>
     <a href="calendrier.html">Calendrier</a>
     <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
+    <a href="photos.html">Photos</a>
   </nav>
 
   <h1>❤️ Rémi & India ❤️</h1>
