--- a/photos.html
+++ b/photos.html
@@ -34,22 +34,42 @@
       margin: 10px;
       border-radius: 8px;
     }
+    #progress-container {
+      width: 90%;
+      max-width: 500px;
+      margin: 10px auto;
+      background: #eee;
+      border-radius: 8px;
+      display: none;
+    }
+    #progress-bar {
+      height: 20px;
+      width: 0%;
+      background: #4caf50;
+      border-radius: 8px;
+      transition: width 0.3s ease;
+    }
   </style>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
 
 <nav>
-    <a href="index.html">Accueil</a>
-    <a href="calendrier.html">Calendrier</a>
-    <a href="carte.html">Carte</a>  <!-- <-- Lien ajouté -->
-    <a href="photos.html">Photos</a>
-  </nav>
+  <a href="index.html">Accueil</a>
+  <a href="calendrier.html">Calendrier</a>
+  <a href="carte.html">Carte</a>
+  <a href="photos.html" class="active">Photos</a>
+</nav>
 
 <h1>Ajouter des photos</h1>
 
 <input type="file" id="photo-input" accept="image/*" multiple />
 <button id="upload-btn">Uploader</button>
+
+<div id="progress-container">
+  <div id="progress-bar"></div>
+</div>
+
 <div id="status"></div>
 
 <h2>Galerie</h2>
@@ -61,7 +81,7 @@
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-storage-compat.js"></script>
 
 <script>
-  // Config Firebase (à remplacer par la tienne)
+  // Config Firebase (remplace par la tienne)
   const firebaseConfig = {
     apiKey: "AIzaSyAMn2TZKfGKkqTLi-PttISA1v2gg-rIeJo",
     authDomain: "webremindiou.firebaseapp.com",
@@ -79,8 +99,9 @@
   const uploadBtn = document.getElementById('upload-btn');
   const status = document.getElementById('status');
   const gallery = document.getElementById('gallery');
+  const progressContainer = document.getElementById('progress-container');
+  const progressBar = document.getElementById('progress-bar');
 
-  // Fonction pour afficher toutes les photos depuis Firestore
   async function loadPhotos() {
     gallery.innerHTML = '';
     try {
@@ -97,38 +118,59 @@
     }
   }
 
-  // Upload plusieurs fichiers
   uploadBtn.addEventListener('click', async () => {
     const files = photoInput.files;
     if (files.length === 0) {
       status.textContent = "Sélectionnez au moins une photo.";
       return;
     }
+
+    progressContainer.style.display = 'block';
+    progressBar.style.width = '0%';
     status.textContent = "Upload en cours...";
-    for (const file of files) {
+
+    for (let i = 0; i < files.length; i++) {
+      const file = files[i];
       const storageRef = storage.ref().child('photos/' + Date.now() + '_' + file.name);
+
       try {
-        // Upload fichier
-        await storageRef.put(file);
-        // Récupérer l'URL de téléchargement
+        const uploadTask = storageRef.put(file);
+
+        await new Promise((resolve, reject) => {
+          uploadTask.on('state_changed', snapshot => {
+            const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+            progressBar.style.width = progress + '%';
+            status.textContent = `Upload "${file.name}": ${progress.toFixed(0)}% (${i + 1}/${files.length})`;
+          }, error => {
+            reject(error);
+          }, () => {
+            resolve();
+          });
+        });
+
         const url = await storageRef.getDownloadURL();
-        // Sauvegarder l'URL dans Firestore
         await db.collection('photos').add({
           url,
           name: file.name,
           uploadedAt: firebase.firestore.FieldValue.serverTimestamp()
         });
-        status.textContent = `Photo "${file.name}" uploadée avec succès.`;
+
       } catch (error) {
         console.error('Erreur upload:', error);
         status.textContent = `Erreur upload de "${file.name}".`;
       }
     }
-    // Recharge la galerie après upload
+
+    status.textContent = "Upload terminé.";
+    progressBar.style.width = '100%';
+    setTimeout(() => {
+      progressContainer.style.display = 'none';
+      progressBar.style.width = '0%';
+    }, 1500);
+
     loadPhotos();
   });
 
-  // Charger la galerie au démarrage
   loadPhotos();
 </script>
 
