--- a/photos.html
+++ b/photos.html
@@ -3,74 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Page Photos</title>
+  <title>Page Photos avec Upload</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    nav {
-      padding: 10px 15px;
-      background-color: #eee;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-    nav a {
-      margin-right: 15px;
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
-    nav a.active {
-      text-decoration: underline;
-      font-weight: bolder;
-      color: #000;
-    }
-    #gallery img {
-      max-width: 150px;
-      margin: 10px;
-      border-radius: 8px;
-    }
-    #progress-container {
-      width: 90%;
-      max-width: 500px;
-      margin: 10px auto;
-      background: #eee;
-      border-radius: 8px;
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    #gallery img { max-width: 150px; margin: 10px; border-radius: 8px; }
+    #progressContainer {
+      width: 100%; background: #eee; height: 20px; border-radius: 10px; margin-top: 10px;
       display: none;
     }
-    #progress-bar {
-      height: 20px;
-      width: 0%;
-      background: #4caf50;
-      border-radius: 8px;
-      transition: width 0.3s ease;
+    #progressBar {
+      height: 100%; width: 0%; background: #4caf50; border-radius: 10px;
+      transition: width 0.3s;
     }
   </style>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Accueil</a>
-  <a href="calendrier.html">Calendrier</a>
-  <a href="carte.html">Carte</a>
-  <a href="photos.html" class="active">Photos</a>
-</nav>
-
 <h1>Ajouter des photos</h1>
-
 <input type="file" id="photo-input" accept="image/*" multiple />
 <button id="upload-btn">Uploader</button>
-
-<div id="progress-container">
-  <div id="progress-bar"></div>
-</div>
-
 <div id="status"></div>
+
+<div id="progressContainer"><div id="progressBar"></div></div>
 
 <h2>Galerie</h2>
 <div id="gallery"></div>
@@ -81,14 +35,14 @@
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-storage-compat.js"></script>
 
 <script>
-  // Config Firebase (remplace par la tienne)
   const firebaseConfig = {
     apiKey: "AIzaSyAMn2TZKfGKkqTLi-PttISA1v2gg-rIeJo",
     authDomain: "webremindiou.firebaseapp.com",
     projectId: "webremindiou",
-    storageBucket: "webremindiou.appspot.com",
+    storageBucket: "webremindiou.firebasestorage.app",
     messagingSenderId: "1041124249181",
     appId: "1:104112424918fbc101314d86347b4",
+    measurementId: "G-XCS133MJ63"
   };
 
   firebase.initializeApp(firebaseConfig);
@@ -99,8 +53,8 @@
   const uploadBtn = document.getElementById('upload-btn');
   const status = document.getElementById('status');
   const gallery = document.getElementById('gallery');
-  const progressContainer = document.getElementById('progress-container');
-  const progressBar = document.getElementById('progress-bar');
+  const progressContainer = document.getElementById('progressContainer');
+  const progressBar = document.getElementById('progressBar');
 
   async function loadPhotos() {
     gallery.innerHTML = '';
@@ -125,9 +79,8 @@
       return;
     }
 
-    progressContainer.style.display = 'block';
-    progressBar.style.width = '0%';
     status.textContent = "Upload en cours...";
+    progressContainer.style.display = 'block';
 
     for (let i = 0; i < files.length; i++) {
       const file = files[i];
@@ -137,15 +90,19 @@
         const uploadTask = storageRef.put(file);
 
         await new Promise((resolve, reject) => {
-          uploadTask.on('state_changed', snapshot => {
-            const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-            progressBar.style.width = progress + '%';
-            status.textContent = `Upload "${file.name}": ${progress.toFixed(0)}% (${i + 1}/${files.length})`;
-          }, error => {
-            reject(error);
-          }, () => {
-            resolve();
-          });
+          uploadTask.on('state_changed',
+            snapshot => {
+              const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+              progressBar.style.width = progress + '%';
+              status.textContent = `Upload "${file.name}": ${progress.toFixed(0)}% (${i+1}/${files.length})`;
+            },
+            error => {
+              reject(error);
+            },
+            () => {
+              resolve();
+            }
+          );
         });
 
         const url = await storageRef.getDownloadURL();
@@ -163,6 +120,7 @@
 
     status.textContent = "Upload terminé.";
     progressBar.style.width = '100%';
+
     setTimeout(() => {
       progressContainer.style.display = 'none';
       progressBar.style.width = '0%';
