--- a/photos.html
+++ b/photos.html
@@ -3,28 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Page Photos avec Upload</title>
+  <title>Photos Firestore</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    #gallery img { max-width: 150px; margin: 10px; border-radius: 8px; }
-    #progressContainer {
-      width: 100%; background: #eee; height: 20px; border-radius: 10px; margin-top: 10px;
-      display: none;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
     }
-    #progressBar {
-      height: 100%; width: 0%; background: #4caf50; border-radius: 10px;
-      transition: width 0.3s;
+    nav {
+      padding: 10px 15px;
+      background-color: #eee;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+    }
+    nav a {
+      margin-right: 15px;
+      color: black;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    nav a.active {
+      text-decoration: underline;
+      font-weight: bolder;
+      color: #000;
+    }
+    #gallery img {
+      max-width: 150px;
+      margin: 10px;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
 
-<h1>Ajouter des photos</h1>
-<input type="file" id="photo-input" accept="image/*" multiple />
-<button id="upload-btn">Uploader</button>
-<div id="status"></div>
+<nav>
+  <a href="index.html">Accueil</a>
+  <a href="calendrier.html">Calendrier</a>
+  <a href="carte.html">Carte</a>
+  <a href="photos.html" class="active">Photos</a>
+</nav>
 
-<div id="progressContainer"><div id="progressBar"></div></div>
+<h1>Ajouter des photos dans Firestore</h1>
+
+<input type="file" id="photo-input" accept="image/*" />
+<button onclick="uploadToFirestore()">Uploader</button>
+<div id="status"></div>
 
 <h2>Galerie</h2>
 <div id="gallery"></div>
@@ -32,104 +57,67 @@
 <!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-storage-compat.js"></script>
 
 <script>
+  // Configuration Firebase (remplace par ta config)
   const firebaseConfig = {
     apiKey: "AIzaSyAMn2TZKfGKkqTLi-PttISA1v2gg-rIeJo",
     authDomain: "webremindiou.firebaseapp.com",
     projectId: "webremindiou",
-    storageBucket: "webremindiou.firebasestorage.app",
+    storageBucket: "webremindiou.appspot.com",
     messagingSenderId: "1041124249181",
-    appId: "1:104112424918fbc101314d86347b4",
-    measurementId: "G-XCS133MJ63"
+    appId: "1:104112424918:web:fbc101314d86347b4"
   };
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
-  const storage = firebase.storage();
 
-  const photoInput = document.getElementById('photo-input');
-  const uploadBtn = document.getElementById('upload-btn');
-  const status = document.getElementById('status');
-  const gallery = document.getElementById('gallery');
-  const progressContainer = document.getElementById('progressContainer');
-  const progressBar = document.getElementById('progressBar');
+  const photoInput = document.getElementById("photo-input");
+  const gallery = document.getElementById("gallery");
+  const status = document.getElementById("status");
 
-  async function loadPhotos() {
-    gallery.innerHTML = '';
-    try {
-      const snapshot = await db.collection('photos').orderBy('uploadedAt', 'desc').get();
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        const img = document.createElement('img');
-        img.src = data.url;
-        img.alt = data.name || 'Photo';
-        gallery.appendChild(img);
-      });
-    } catch (e) {
-      console.error("Erreur chargement photos:", e);
-    }
-  }
-
-  uploadBtn.addEventListener('click', async () => {
-    const files = photoInput.files;
-    if (files.length === 0) {
-      status.textContent = "Sélectionnez au moins une photo.";
+  function uploadToFirestore() {
+    const file = photoInput.files[0];
+    if (!file) {
+      alert("Sélectionnez un fichier.");
       return;
     }
 
-    status.textContent = "Upload en cours...";
-    progressContainer.style.display = 'block';
+    const reader = new FileReader();
+    reader.onloadend = function () {
+      const base64String = reader.result;
 
-    for (let i = 0; i < files.length; i++) {
-      const file = files[i];
-      const storageRef = storage.ref().child('photos/' + Date.now() + '_' + file.name);
+      db.collection("photos").add({
+        name: file.name,
+        data: base64String,
+        uploadedAt: firebase.firestore.FieldValue.serverTimestamp(),
+      }).then(() => {
+        status.textContent = "Photo ajoutée avec succès.";
+        loadImages();
+      }).catch(err => {
+        console.error("Erreur Firestore:", err);
+        status.textContent = "Erreur lors de l'ajout.";
+      });
+    };
 
-      try {
-        const uploadTask = storageRef.put(file);
+    reader.readAsDataURL(file);
+  }
 
-        await new Promise((resolve, reject) => {
-          uploadTask.on('state_changed',
-            snapshot => {
-              const progress = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
-              progressBar.style.width = progress + '%';
-              status.textContent = `Upload "${file.name}": ${progress.toFixed(0)}% (${i+1}/${files.length})`;
-            },
-            error => {
-              reject(error);
-            },
-            () => {
-              resolve();
-            }
-          );
+  function loadImages() {
+    gallery.innerHTML = '';
+    db.collection("photos").orderBy("uploadedAt", "desc").get()
+      .then(snapshot => {
+        snapshot.forEach(doc => {
+          const data = doc.data();
+          const img = document.createElement("img");
+          img.src = data.data;
+          img.alt = data.name;
+          gallery.appendChild(img);
         });
+      });
+  }
 
-        const url = await storageRef.getDownloadURL();
-        await db.collection('photos').add({
-          url,
-          name: file.name,
-          uploadedAt: firebase.firestore.FieldValue.serverTimestamp()
-        });
-
-      } catch (error) {
-        console.error('Erreur upload:', error);
-        status.textContent = `Erreur upload de "${file.name}".`;
-      }
-    }
-
-    status.textContent = "Upload terminé.";
-    progressBar.style.width = '100%';
-
-    setTimeout(() => {
-      progressContainer.style.display = 'none';
-      progressBar.style.width = '0%';
-    }, 1500);
-
-    loadPhotos();
-  });
-
-  loadPhotos();
+  loadImages(); // Charger à l'ouverture
 </script>
 
 </body>
