--- a/photos.html
+++ b/photos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Photos Firestore</title>
+  <title>Page Photos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,6 +35,7 @@
       border-radius: 8px;
     }
   </style>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
 
@@ -45,10 +46,10 @@
   <a href="photos.html" class="active">Photos</a>
 </nav>
 
-<h1>Ajouter des photos dans Firestore</h1>
+<h1>Ajouter des photos</h1>
 
-<input type="file" id="photo-input" accept="image/*" />
-<button onclick="uploadToFirestore()">Uploader</button>
+<input type="file" id="photo-input" accept="image/*" multiple />
+<button id="upload-btn">Uploader</button>
 <div id="status"></div>
 
 <h2>Galerie</h2>
@@ -59,65 +60,82 @@
 <script src="https://www.gstatic.com/firebasejs/10.8.1/firebase-firestore-compat.js"></script>
 
 <script>
-  // Configuration Firebase (remplace par ta config)
+  // Config Firebase (à remplacer par ta config)
   const firebaseConfig = {
     apiKey: "AIzaSyAMn2TZKfGKkqTLi-PttISA1v2gg-rIeJo",
     authDomain: "webremindiou.firebaseapp.com",
     projectId: "webremindiou",
     storageBucket: "webremindiou.appspot.com",
     messagingSenderId: "1041124249181",
-    appId: "1:104112424918:web:fbc101314d86347b4"
+    appId: "1:104112424918fbc101314d86347b4",
   };
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.firestore();
 
-  const photoInput = document.getElementById("photo-input");
-  const gallery = document.getElementById("gallery");
-  const status = document.getElementById("status");
+  const photoInput = document.getElementById('photo-input');
+  const uploadBtn = document.getElementById('upload-btn');
+  const status = document.getElementById('status');
+  const gallery = document.getElementById('gallery');
 
-  function uploadToFirestore() {
-    const file = photoInput.files[0];
-    if (!file) {
-      alert("Sélectionnez un fichier.");
+  // Charger toutes les photos et les afficher
+  async function loadPhotos() {
+    gallery.innerHTML = '';
+    try {
+      const snapshot = await db.collection('photos').orderBy('uploadedAt', 'desc').get();
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const img = document.createElement('img');
+        img.src = data.data;  // la donnée base64
+        img.alt = data.name || 'Photo';
+        gallery.appendChild(img);
+      });
+    } catch (e) {
+      console.error("Erreur chargement photos:", e);
+    }
+  }
+
+  // Fonction utilitaire pour lire un fichier en base64
+  function readFileAsBase64(file) {
+    return new Promise((resolve, reject) => {
+      const reader = new FileReader();
+      reader.onload = () => resolve(reader.result);
+      reader.onerror = () => reject(reader.error);
+      reader.readAsDataURL(file);
+    });
+  }
+
+  uploadBtn.addEventListener('click', async () => {
+    const files = photoInput.files;
+    if (files.length === 0) {
+      status.textContent = "Sélectionnez au moins une photo.";
       return;
     }
 
-    const reader = new FileReader();
-    reader.onloadend = function () {
-      const base64String = reader.result;
+    status.textContent = `Upload de ${files.length} photo(s) en cours...`;
 
-      db.collection("photos").add({
-        name: file.name,
-        data: base64String,
-        uploadedAt: firebase.firestore.FieldValue.serverTimestamp(),
-      }).then(() => {
-        status.textContent = "Photo ajoutée avec succès.";
-        loadImages();
-      }).catch(err => {
-        console.error("Erreur Firestore:", err);
-        status.textContent = "Erreur lors de l'ajout.";
-      });
-    };
-
-    reader.readAsDataURL(file);
-  }
-
-  function loadImages() {
-    gallery.innerHTML = '';
-    db.collection("photos").orderBy("uploadedAt", "desc").get()
-      .then(snapshot => {
-        snapshot.forEach(doc => {
-          const data = doc.data();
-          const img = document.createElement("img");
-          img.src = data.data;
-          img.alt = data.name;
-          gallery.appendChild(img);
+    try {
+      const uploadPromises = Array.from(files).map(async (file) => {
+        const docRef = db.collection('photos').doc();
+        await docRef.set({
+          name: file.name,
+          data: await readFileAsBase64(file),
+          uploadedAt: firebase.firestore.FieldValue.serverTimestamp()
         });
       });
-  }
 
-  loadImages(); // Charger à l'ouverture
+      await Promise.all(uploadPromises);
+
+      status.textContent = "Toutes les photos ont été uploadées avec succès !";
+      loadPhotos();
+    } catch (error) {
+      console.error(error);
+      status.textContent = "Erreur lors de l'upload.";
+    }
+  });
+
+  // Chargement initial de la galerie
+  loadPhotos();
 </script>
 
 </body>
